--- a/index.html
+++ b/index.html
@@ -5,21 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kerala Tourism</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-image: url('pic3.jpg');
-            background-size: cover;
+            background: linear-gradient(to right, white, white);
             background-attachment: fixed;
-            background-position: center;
             color: white;
         }
         .navbar {
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            background-color: black;
+            
+        }
+        .navbar-brand{
+            font-family: 'Cinzel', serif;
+            font-size: 2rem;
+            font-weight: 600;
+
         }
         .hero-section {
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.4);
             padding: 60px 20px;
             border-radius: 20px;
         }
@@ -47,9 +56,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container">
-                <a class="navbar-brand fs-3" href="#">Kerala Tourism</a>
+                <a class="navbar-brand fs-3" href="#">ThiruKerala</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -70,34 +79,49 @@
         </nav>
     </header>
 
-    <div class="container my-5" id="home">
-        <div class="hero-section text-center">
-            <h1 class="display-4 fw-bold">Welcome to Kerala Tourism</h1>
-            <p class="lead">Explore lush greenery, serene backwaters, and vibrant traditions of God's Own Country.</p>
-            <button class="btn btn-warning me-3" data-bs-toggle="modal" data-bs-target="#bookingModal">Book Your Trip</button>
-            <button class="btn btn-outline-light" onclick="window.alert('Thank you for exploring Kerala Tourism!')">Learn More</button>
+   
+
+<div class="container-fluid px-0" id="home">
+    <div id="keralaCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="pic4.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Backwaters">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+            <h3>Backwaters Bliss</h3>
+            <p>Glide through the tranquil waters of Alleppey on a houseboat.</p>
+          </div>
         </div>
+        <div class="carousel-item">
+          <img src="pic5.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Hills">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+            <h3>Munnar Magic</h3>
+            <p>Escape into the cool mist of Kerala’s green hills.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="pic6.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Beach">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+            <h3>Sunset Shores</h3>
+            <p>Relax on the golden sands of Varkala and Kovalam.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#keralaCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#keralaCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="bookingModalLabel">Book Your Kerala Tour</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    Plan your dream vacation to Kerala! Fill out the form below to get started.
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button class="btn btn-success">Proceed</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+  
     <!-- Gallery Section -->
     <div class="container my-5" id="gallery">
         <div class="row text-center">
