--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <!-- Footer -->
     <footer class="bg-success text-white text-center py-4">
-        <p class="mb-0">© 2025 Kerala Tourism | Designed with ♥ using Bootstrap</p>
+        <p class="mb-0">© 2025 Kerala Tourism | Designed by Abhijnakotyan</p>
     </footer>
 
     <!-- Bootstrap JS -->
