--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 Explore Top Destinations
               </h2>
             <div class="col-md-4 mb-4 mt-5">
-                <div class="card "data-aos="slide-right" data-aos-duration="1900" data-aos-delay="200">
-                    <img src="kochi.png" class="crd-img-top" alt="Backwaters">
+                <div class="card   rounded-end-pill overflow-hidden " data-aos="slide-right" data-aos-duration="1900" data-aos-delay="200">
+                    <img src="kochi.png" class="crd-img-top  " alt="Backwaters">
                     <div class="card-body">
                         <h5 class="card-title text-black">Kochi</h5>
                         <p class="card-text text-muted">Explore the historic Fort Kochi, famous for its colonial architecture, Chinese fishing nets, and vibrant arts scene.</p>
@@ -101,8 +101,8 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4 mt-5">
-                <div class="card "data-aos="slide-up" data-aos-duration="1900" data-aos-delay="200">
-                    <img src="thekkady.jpg" class="card-img-top" alt="Hill Stations">
+                <div class="card rounded-top-pill overflow-hidden"data-aos="slide-up" data-aos-duration="1900" data-aos-delay="200">
+                    <img src="thekkady.jpg" class="card-img-top  " alt="Hill Stations">
                     <div class="card-body">
                         <h5 class="card-title text-black">Thekkady</h5>
                         <p class="card-text text-muted">Experience the wilderness of Periyar Wildlife Sanctuary and enjoy a boat ride on Periyar Lake.</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4 mt-5">
-                <div class="card"data-aos="slide-left" data-aos-duration="1900" data-aos-delay="200">
+                <div class="card rounded-start-pill overflow-hidden"data-aos="slide-left" data-aos-duration="1900" data-aos-delay="200">
                     <img src="fort.webp" class="card-img-top" alt="Beaches">
                     <div class="card-body">
                         <h5 class="card-title text-black">Bekal Fort</h5>
