--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div style="background-color: aliceblue;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container">
@@ -85,7 +86,7 @@
 
   
     <!-- Gallery Section -->
-    <div class="container my-5" id="gallery">
+    <div class="mx-4 mb-0" id="gallery">
         <div class="row text-center">
             <h2 class="text-center fw-bold text-dark " data-aos="slide-left" data-aos-duration="1500" data-aos-delay="200">
                 Explore Top Destinations
@@ -122,30 +123,13 @@
             </div>
   
 
-    <!-- Contact Section -->
-    <div class="container my-5" id="contact">
-        <h2 class="text-center mb-4">Contact Us</h2>
-        <form>
-            <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email">
-            </div>
-            <div class="mb-3">
-                <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="4" placeholder="Your message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-warning">Send Message</button>
-        </form>
-    </div>
+   
 
     <!-- Footer -->
-    <footer class="bg-success text-white text-center py-4">
-        <p class="mb-0">© 2025 Kerala Tourism | Designed by Abhijnakotyan</p>
-    </footer>
+    <footer class="bg-gray-900 text-black w-full text-center py-4 mt-auto">
+        <p class="text-sm">&copy; 2025 Kerala Tourism | Designed by Abhijnakotyan</p>
+      </footer>
+      
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
@@ -153,6 +137,7 @@
     <script>
         AOS.init(); 
     </script>
+    </div>
 </body>
 
 </html>
