--- a/index.html
+++ b/index.html
@@ -8,135 +8,141 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- AOS CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
 </head>
 
 <body>
     <div style="background-color: aliceblue;">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="container">
-                <a class="navbar-brand fs-3" href="#">ThiruKerala</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
+                <div class="container">
+                    <a class="navbar-brand fs-3" href="#">ThiruKerala</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link nav-link:hover" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link:hover" href="place.html">Gallery</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link:hover" href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <div class="container-fluid px-0" id="home">
+            <!-- Carousel Section -->
+            <div id="keralaCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <video class="d-block w-100 object-fit-cover" style="height: 500px;" autoplay muted loop>
+                            <source src="munar.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+                            <h3>Munnar Magic</h3>
+                            <p>Escape into the cool mist of Kerala’s green hills.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="backwaters.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Backwaters">
+                        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+                            <h3>Backwaters Bliss</h3>
+                            <p>Glide through the tranquil waters of Alleppey on a houseboat.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="kovalam-beach.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Beach">
+                        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+                            <h3>Sunset Shores</h3>
+                            <p>Relax on the golden sands of Varkala and Kovalam.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#keralaCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="place.html">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+                <button class="carousel-control-next" type="button" data-bs-target="#keralaCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-        </nav>
-    </header>
 
-   
+            <!-- Gallery Section -->
+            <div class="mx-4 mb-0 mt-4" id="gallery">
+                <div class="row text-center">
+                    <h2 class="text-center fw-bold text-dark" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="200">
+                        Explore Top Destinations
+                    </h2>
 
-<div class="container-fluid px-0" id="home">
-    <div id="keralaCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#keralaCarousel" data-bs-slide-to="2"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="backwaters.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Backwaters">
-          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-            <h3>Backwaters Bliss</h3>
-            <p>Glide through the tranquil waters of Alleppey on a houseboat.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="munnar1.webp" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Hills">
-          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-            <h3>Munnar Magic</h3>
-            <p>Escape into the cool mist of Kerala’s green hills.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="kovalam-beach.jpg" class="d-block w-100 object-fit-cover" style="height: 500px;" alt="Beach">
-          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
-            <h3>Sunset Shores</h3>
-            <p>Relax on the golden sands of Varkala and Kovalam.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#keralaCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#keralaCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-  
-    <!-- Gallery Section -->
-    <div class="mx-4 mb-0" id="gallery">
-        <div class="row text-center">
-            <h2 class="text-center fw-bold text-dark " data-aos="slide-left" data-aos-duration="1500" data-aos-delay="200">
-                Explore Top Destinations
-              </h2>
-            <div class="col-md-4 mb-4 mt-5">
-                <div class="card   rounded-end-pill overflow-hidden " data-aos="slide-right" data-aos-duration="1900" data-aos-delay="200">
-                    <img src="kochi.png" class="crd-img-top  " alt="Backwaters">
-                    <div class="card-body">
-                        <h5 class="card-title text-black">Kochi</h5>
-                        <p class="card-text text-muted">Explore the historic Fort Kochi, famous for its colonial architecture, Chinese fishing nets, and vibrant arts scene.</p>
-                        <a href="place.html" class="btn btn-outline-success">Explore</a>
+                    <!-- Card 1 -->
+                    <div class="col-md-4 mb-4 mt-5" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
+                        <div class="card overflow-hidden sharp-edged-card">
+                            <img src="kochi.png" alt="Backwaters" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title text-black">Kochi</h5>
+                                <p class="card-text text-muted">Explore the historic Fort Kochi, famous for its colonial architecture, vibrant arts scene.</p>
+                                <a href="place.html" class="btn btn-outline-success">Explore</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4 mt-5">
-                <div class="card rounded-top-pill overflow-hidden"data-aos="slide-up" data-aos-duration="1900" data-aos-delay="200">
-                    <img src="thekkady.jpg" class="card-img-top  " alt="Hill Stations">
-                    <div class="card-body">
-                        <h5 class="card-title text-black">Thekkady</h5>
-                        <p class="card-text text-muted">Experience the wilderness of Periyar Wildlife Sanctuary and enjoy a boat ride on Periyar Lake.</p>
-                        <a href="place.html" class="btn btn-outline-success">Discover</a>
+
+                    <!-- Card 2 -->
+                    <div class="col-md-4 mb-4 mt-5" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
+                        <div class="card overflow-hidden sharp-edged-card">
+                            <img src="thekkady.jpg" alt="Hill Stations" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title text-black">Thekkady</h5>
+                                <p class="card-text text-muted">Experience the wilderness of Periyar Wildlife Sanctuary and enjoy a boat ride on Periyar Lake.</p>
+                                <a href="place.html" class="btn btn-outline-success">Discover</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4 mt-5">
-                <div class="card rounded-start-pill overflow-hidden"data-aos="slide-left" data-aos-duration="1900" data-aos-delay="200">
-                    <img src="fort.webp" class="card-img-top" alt="Beaches">
-                    <div class="card-body">
-                        <h5 class="card-title text-black">Bekal Fort</h5>
-                        <p class="card-text text-muted">Explore the historic Bekal Fort,Amazing and  overlo'oking the Arabian Sea with a scenic beach view.</p>
-                        <a href="place.html" class="btn btn-outline-success">Discover</a>
+
+                    <!-- Card 3 -->
+                    <div class="col-md-4 mb-4 mt-5" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
+                        <div class="card overflow-hidden sharp-edged-card">
+                            <img src="fort.webp" alt="Beaches" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title text-black">Bekal Fort</h5>
+                                <p class="card-text text-muted">Explore the historic Bekal Fort, overlooking the Arabian Sea with a scenic beach view.</p>
+                                <a href="place.html" class="btn btn-outline-success">Discover</a>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
-  
 
-   
+            <!-- Footer -->
+            <footer class="bg-gray-900 text-black w-full text-center py-4 mt-auto">
+                <p class="text-sm">&copy; 2025 Kerala Tourism | Designed by Abhijnakotyan</p>
+            </footer>
 
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-black w-full text-center py-4 mt-auto">
-        <p class="text-sm">&copy; 2025 Kerala Tourism | Designed by Abhijnakotyan</p>
-      </footer>
-      
+        </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script>
-        AOS.init(); 
-    </script>
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </div>
 </body>
 
